--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="row stage" style="display: none" id="stage-2">
-                    <div class="row sub-stage" id="artistBlock">
+                    <div class="row sub-stage artistCategoriesChoose" id="artistBlock">
                         <div class="errorCat">Choose at least one category</div>
 
                         {% include 'ActedLegalDocsBundle:Default:categories.html.twig' %}
