--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
@@ -100,10 +100,14 @@
                 </div>
                 <div class="clearfix"></div>
             {% endif %}
+            <div class="audioBlock">
             {% for audio in artist.user.profile.audioList %}
-                <h2>{{ audio.name }}</h2>
-                <audio controls="true" name="media"><source src="{{ audio.link }}" type="audio/mpeg"></audio>
+                <!--<h2>{{ audio.name }}</h2>-->
+                <!--<audio controls="true" name="media"><source src="{{ audio.link }}" type="audio/mpeg"></audio>-->
+                <iframe width="100%" height="150" scrolling="no" frameborder="no" src="{{ audio.link }}"></iframe>
             {% endfor %}
+            </div>
+
         </section>
 
     </div>
