--- a/web/css/style-retina.css
+++ b/web/css/style-retina.css
@@ -8052,7 +8052,7 @@ html, body {
     overflow-x: hidden;
 }
 
-/*body{opacity: 0;}*/
+body{opacity: 0;}
 
 main {
     position: relative;
@@ -16111,7 +16111,7 @@ html, body {
     overflow-x: hidden;
 }
 
-/*body{opacity: 0;}*/
+body{opacity: 0;}
 
 main {
     position: relative;
