--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -346,7 +346,7 @@
 
                 <div id="tab-SearchResultTabContent" class="tab-block tab-content SearchResultTabContent" style="display: none; padding-bottom: 100px;">
                     <div class="filters">
-                        <form id="recomendedFilter">
+                        <form id="recomendedFilterSearch">
                             <select data-placeholder="Rating" name="order" id="recFilterRating">
                                 <option value="" disabled selected hidden>Rating</option>
                                 <option value="top_rated">Top rated</option>
@@ -364,8 +364,8 @@
                                 <option value="321">From 0 to 200 miles</option>
                             </select>
                             <div class="custom-checkbox">
-                                <input type="checkbox" name="with_video" value="1" id="only-video">
-                                <label for="only-video">Only artists with video</label>
+                                <input type="checkbox" name="with_video" value="1" id="only-videoSearch">
+                                <label for="only-videoSearch">Only artists with video</label>
                             </div>
                         </form>
                     </div>
