fixed search from homepage with enter button, fixed infifnite scroll in search result for main category, search result tab becomes active after search

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -313,7 +313,7 @@
                     </div>
                 </div>
 
-                <div id="tab-catSearchResNew" class="tab-block tab-content searchTabContent" style="display: none; padding-bottom: 100px;">
+                <div id="tab-catSearchResNew" class="tab-block tab-content searchTabContent catSearchResNew" style="display: none; padding-bottom: 100px;">
                     <div class="filters">
                         <form id="recomendedFilter">
                             <select data-placeholder="Rating" name="order" id="recFilterRating">
