--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -8703,7 +8703,7 @@ section.used-by {
 }
 
 .price-list>.item>.video {
-    cursor: pointer;
+    /*cursor: pointer;*/
     position: relative;
     overflow: hidden;
     display: inline-block;
@@ -10393,7 +10393,7 @@ span.removeNewImage
 }
 .searchSearchResultWrapper .profile-card, .searchRecomendationWrapper .profile-card
 {
-    width: 204px !important;
+    width: 205px !important;
 }
 .results-content .slider-block .bx-wrapper
 {
