--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -33,6 +33,7 @@
                                 </div>
                                 <div class="performanceVideoAdd">
                                     <form class="videoAddForm">
+                                        <span class="videoAddMessage">Only video from youTube and Vimeo can be added</span>
                                         <input type="text" class="form-control videoPerformanceAdd">
                                     </form>
                                     <button type="submit" id="AddPerformanceVideo" class="btn btn-default">Submit</button>
