--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
@@ -31,8 +31,8 @@
             <div class="specializations">
                 <ul>
 
-                    {% for category in artist.user.profile.categories|slice(0, 3) %}
-                    <li class="currentCatUser"><a href="#">{{ category.title }}</a>
+                    {% for category in artist.user.profile.categories %}
+                    <li class="currentCatUser"><a href="#" id="{{ category.id }}">{{ category.title }}</a>
                         <div class="divider"></div>
                     </li>
                     {% endfor %}
@@ -133,7 +133,7 @@
             </div>
             <div class="modal-body">
                 <div class="row stage">
-                    <div class="row sub-stage" id="artistBlock">
+                    <div class="row sub-stage categoriesChange" id="artistBlock">
 
                         {% include 'ActedLegalDocsBundle:Default:categories.html.twig' %}
 
