--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
@@ -128,9 +128,12 @@
             {% endif %}
             <div class="audioBlock">
             {% for audio in artist.user.profile.audioList %}
-                <!--<h2>{{ audio.name }}</h2>-->
-                <!--<audio controls="true" name="media"><source src="{{ audio.link }}" type="audio/mpeg"></audio>-->
-                <iframe width="100%" height="150" scrolling="no" frameborder="no" src="{{ audio.link }}"></iframe>
+                <div class="audioEditProfile">
+                    {% if is_granted('EDIT', artist) %}
+                        <span class="removeNewAudio deleteMedia" id="{{ audio.id }}"><i class="fa fa-times-circle-o"></i></span>
+                    {% endif %}
+                    <iframe width="100%" height="150" scrolling="no" frameborder="no" src="{{ audio.link }}"></iframe>
+                </div>
             {% endfor %}
             </div>
 
