--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -10419,9 +10419,17 @@ a.disabled {
 }
 .navbar
 {
-    z-index: 1000;
+    z-index: 999999;
 }
 .results-content .slider
 {
     margin-top: 15px;
+}
+.audioEditProfile .deleteMedia
+{
+    right: 0;
+    color: #d9534f;
+    font-size: 30px;
+    cursor: pointer;
+    position: absolute;
 }
