Fixes in profile editing

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -89,7 +89,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="profile"><a href="#">
+
+                    <li class="profile"><a href="/profile/{{ app.user.artist.slug }}">
                             Profile
                             <div class="underline">
                                 <div class="top"></div>
