--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -47,7 +47,7 @@ html, body {
     overflow-x: hidden;
 }
 
-body{opacity: 0;}
+body {opacity: 0;}
 
 main {
     position: relative;
@@ -2499,4 +2499,7 @@ a.disabled {
     font-size: 30px;
     cursor: pointer;
     position: absolute;
+}
+.contact-details .form-group {
+    max-height: 77px;
 }
