--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
@@ -2434,6 +2434,7 @@ only screen and (min-resolution: 2dppx) {
     }
 
 }
+
 .avatarEditable
 {
     float: left;
@@ -2620,4 +2621,85 @@ span.removeNewImage
 #section-audio iframe
 {
     margin-top: 30px;
+}
+.searchSearchResultWrapper .profile-card, .searchRecomendationWrapper .profile-card
+{
+    width: 205px !important;
+}
+.results-content .slider-block .bx-wrapper
+{
+    padding: 0 30px;
+}
+#errorLogRecovery{
+    color: #d9534f;
+    text-align: center;
+    display: none;
+}
+a.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+    cursor: default;
+}
+.info .username
+{
+    max-height: 65px;
+    overflow: hidden;
+}
+.specializations ul .currentCatUser:nth-child(n+4) {
+    display: none
+}
+.navbar
+{
+    z-index: 999999;
+}
+.results-content .slider
+{
+    margin-top: 15px;
+}
+.audioEditProfile .deleteMedia
+{
+    right: 0;
+    color: #d9534f;
+    font-size: 30px;
+    cursor: pointer;
+    position: absolute;
+}
+.contact-details .form-group
+{
+    max-height: 77px;
+}
+#section-audio
+{
+    display: none;
+}
+.price-list .video iframe
+{
+    width: 296px !important;
+    height: 205px !important;
+}
+.imagePerformanceChange
+{
+    width: 296px;
+    height: 205px;
+}
+.performanceVideoAdd
+{
+    margin-top: 50px;
+}
+.offerMediaType
+{
+    margin-top: 83px;
+}
+#image-performance-change1 .cr-viewport
+{
+    margin-top: 10px;
+}
+#image-performance-change1 .upload-resultBg
+{
+    margin-top: 5px;
+    float: right;
+}
+#image-performance-change1 .btn-file
+{
+    width: 115px;
 }
