Fixed image addingin media block, fixed video adding, fixed creating new performance, fixed editing performance.

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
@@ -87,7 +87,6 @@
                 <form class="videoAddForm">
                     <input type="text" class="form-control videoAdd">
                 </form>
-                    <div id="addNewInputVideo"><i class="fa fa-plus"></i></div>
                     <button type="submit" id="sendNewVideo" class="btn btn-default">Submit</button>
                 </div>
                 <div class="clearfix"></div>
@@ -99,7 +98,7 @@
 
             <ul class="bxVideoSlider">
                 {% for video in artist.user.profile.videoList %}
-                    <li><iframe src="{{ video.link }}" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></li>
+                    <li id="imageSlider{{ video.videoId }}"><iframe src="{{ video.link }}" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></li>
                 {% endfor %}
             </ul>
 
@@ -121,7 +120,6 @@
                     <form class="audioAddForm">
                         <input type="text" class="form-control audioAdd">
                     </form>
-                    <div id="addNewInputAudio"><i class="fa fa-plus"></i></div>
                     <button type="submit" id="sendNewAudio" class="btn btn-default">Submit</button>
                 </div>
                 <div class="clearfix"></div>
