--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -89,7 +89,7 @@
                                     <button type="submit" id="AddPerformanceVideo" class="btn btn-default">Submit</button>
                                 </div>
 
-                                <div class="imagePerfinput">
+                                <!--<div class="imagePerfinput">
                                     <div class="changeImageContiner"></div>
                                     <div class="actions">
                                         <a class="btn btn-file">
@@ -97,7 +97,7 @@
                                         </a>
                                         <button class="upload-resultBg btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                                     </div>
-                                </div>
+                                </div>-->
 
                             </div>
                             <div class="performanceVideo">
@@ -215,7 +215,7 @@
                                 <button type="submit" id="AddPerformanceVideo" class="btn btn-default">Submit</button>
                             </div>
 
-                            <div class="imagePerfinput">
+                            <!--<div class="imagePerfinput">
                                 <div class="changeImageContiner"></div>
                                 <div class="actions">
                                     <a class="btn btn-file">
@@ -223,7 +223,7 @@
                                     </a>
                                     <button class="upload-resultBg btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                                 </div>
-                            </div>
+                            </div>-->
 
                         </div>
                         <div class="performanceVideo">
