--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -932,13 +932,13 @@ section.used-by {
     color: #b1b1b1;
 }
 
-.pagination a.prev-page span {
+/*.pagination a.prev-page span {
     -webkit-transform: rotate(-180deg);
     -moz-transform: rotate(-180deg);
     -ms-transform: rotate(-180deg);
     -o-transform: rotate(-180deg);
     transform: rotate(-180deg);
-}
+}*/
 
 .pagination a.not-active {
     cursor: not-allowed;
@@ -2502,4 +2502,8 @@ a.disabled {
 }
 .contact-details .form-group {
     max-height: 77px;
+}
+.audioAddForm
+{
+    margin-bottom: 10px;
 }
