--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
@@ -936,13 +936,13 @@ section.used-by {
     color: #b1b1b1;
 }
 
-.pagination a.prev-page span {
+/*.pagination a.prev-page span {
     -webkit-transform: rotate(-180deg);
     -moz-transform: rotate(-180deg);
     -ms-transform: rotate(-180deg);
     -o-transform: rotate(-180deg);
     transform: rotate(-180deg);
-}
+}*/
 
 .pagination a.not-active {
     cursor: not-allowed;
@@ -2702,4 +2702,8 @@ a.disabled {
 #image-performance-change1 .btn-file
 {
     width: 115px;
+}
+.audioAddForm
+{
+    margin-bottom: 10px;
 }
